feat: add UI button to trigger update

--- a/backend/app/static/index.html
+++ b/backend/app/static/index.html
@@ -163,6 +163,16 @@
     </section>
 
     <section class="card">
+      <h2>Atualização</h2>
+      <div class="row">
+        <button id="updateNowBtn" class="secondary">Atualizar agora</button>
+      </div>
+      <div class="muted" style="margin-top: 8px; font-size: 12px;">
+        No Raspberry: executa o auto-update (git pull + reinicia o serviço).
+      </div>
+    </section>
+
+    <section class="card">
       <h2>Temperatura (manual)</h2>
       <div class="row row-temp">
         <label>
@@ -204,6 +214,6 @@
     </div>
   </footer>
 
-  <script src="/static/app.js?v=16"></script>
+  <script src="/static/app.js?v=17"></script>
 </body>
 </html>
