Improve updater: zip fallback + update log

--- a/backend/app/static/index.html
+++ b/backend/app/static/index.html
@@ -410,6 +410,7 @@
       <div class="muted" style="margin-top: 8px; font-size: 12px;">
         No Raspberry: executa o auto-update (git pull + reinicia o serviço).
       </div>
+      <pre class="terminal" id="updateLog" style="margin-top: 10px; max-height: 200px; overflow: auto;"></pre>
     </section>
 
     <section class="card">
