UI: adicionar logo; Wi-Fi logs em PT-BR

--- a/backend/app/static/index.html
+++ b/backend/app/static/index.html
@@ -4,12 +4,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Chroma</title>
-  <link rel="stylesheet" href="/static/styles.css?v=16" />
+  <link rel="stylesheet" href="/static/styles.css?v=17" />
 </head>
 <body>
   <main class="wrap">
     <header class="bar">
-      <h1>Chroma</h1>
+      <div class="brand">
+        <img class="brand-logo" src="/static/logo-branca.png" alt="Chroma" />
+        <h1>Chroma</h1>
+      </div>
       <div class="status" id="connStatus">desconectado</div>
     </header>
 
