Fix: Adicionar suporte completo a Wi-Fi, sensor de filamento e melhorias no docker-compose

--- a/backend/app/static/index.html
+++ b/backend/app/static/index.html
@@ -11,6 +11,7 @@
     <header class="bar">
       <h1>Chroma</h1>
       <div class="status" id="connStatus">desconectado</div>
+      <div class="status" id="filamentStatus" style="margin-left: 10px;" title="Status do sensor de filamento">—</div>
     </header>
 
     <div class="toast-host" id="toastHost" aria-live="polite" aria-relevant="additions" aria-atomic="false"></div>
